kubernetes/apps/backrest/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backrest
  labels:
    app: backrest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backrest
  template:
    metadata:
      labels:
        app: backrest
    spec:
      enableServiceLinks: true
      containers:
      - name: backrest
        image: garethgeorge/backrest:latest
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        ports:
        - containerPort: 9898
          name: http
        volumeMounts:
        - name: backrest-data
          mountPath: /data
        - name: backrest-config
          mountPath: /config
        - name: backrest-userdata
          mountPath: /userdata
      volumes:
      - name: backrest-data
        persistentVolumeClaim:
          claimName: backrest-data
      - name: backrest-config
        persistentVolumeClaim:
          claimName: backrest-config
      - name: backrest-userdata
        persistentVolumeClaim:
          claimName: backrest-userdata
