kubernetes/apps/backrest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backrest
spec:
  selector:
    app: backrest
  ports:
  - name: http
    port: 9898
    targetPort: 9898
    protocol: TCP
